fix: style issue on IOS

--- a/src/components/otp/style.css
+++ b/src/components/otp/style.css
@@ -11,6 +11,7 @@
   border-radius: 0.4rem;
   outline: none;
   border: 2px solid #242424;
+  background: rgb(59, 59, 59);
   text-align: center;
   font-size: 1.2rem;
   transition: border-color 0.3s;
